<resources>
    <string name="app_name">Algorithm Visualizer</string>
    <string name="btnGoToLearnAct">Learn</string>
    <string name="btnGoToTestAct">Test</string>
    <string name="btnGoToStatsAct">Statistics</string>
    <string name="btnExit">Exit</string>
    <string name="btnLearnNextStep">NEXT</string>
    <string name="btnLearnPrevStep">PREVIOUS</string>
    <string name="btnLearnQuit">QUIT</string>
    <string name="btnLearnSwitchViewTree">SWITCH TO GRAPH VIEW</string>
    <string name="btnLearnSwitchViewGraph">SWITCH TO TREE VIEW</string>

    <string name="btnTestCancel">CANCEL UNION(_,_)</string>
    <string name="btnTestQuit">QUIT</string>
    <string name="txtViewAvailOpt">ACTIONS:</string>
    <string name="btnTestUnion">UNION(_,_)</string>
    <string name="btnTestCheck">CHECK STEP</string>
    <string name="btnTestMakeSet">MAKE SET(_)</string>
    <string name="btnTestSortEdges">SORT EDGES</string>
    <string name="btnTestSelectEdge">GET NEXT EDGE</string>
    <string name="btnTestSkipEdge">SKIP EDGE</string>
    <string name="btnTestStart">START</string>
    <string name="btnTestSwitchViewTree">SWITCH TO GRAPH VIEW</string>
    <string name="btnTestSwitchViewGraph">SWITCH TO TREE VIEW</string>

    <string name="title_activity_learn">Learn Activity</string>
    <string name="title_activity_test">Test Activity</string>
</resources>
