<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingLeft="@dimen/activityTestPaddingLeft"
android:paddingRight="@dimen/activityTestPaddingRight"
android:paddingTop="@dimen/activityTestPaddingTop"
android:paddingBottom="@dimen/activityTestPaddingBottom"
android:id="@id/testActCanvasId"
tools:context="com.njinfotech.algorithmvisualizer.TestActivity">

<LinearLayout
    android:layout_width="@dimen/activityTestLinLayWidth"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id = "@+id/linearlayout">



    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnTestStart"

        android:id="@id/btnTestStart"
        android:onClick="startTest" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:gravity="center"
        android:padding="@dimen/activityTestTextViewPad"
        android:text="@string/txtViewAvailOpt" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnTestMakeSet"

        android:id="@id/btnTestMakeSet"
        android:onClick="stepMakeSet" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnTestSelectEdge"

        android:id="@id/btnTestSelectEdge"
        android:onClick="stepSelectEdge" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnTestUnion"

        android:id="@id/btnTestUnion"
        android:onClick="stepUnion" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnTestCheck"

        android:id="@id/btnTestCheck"
        android:onClick="stepCheck" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnTestCancel"

        android:id="@id/btnTestCancel"
        android:onClick="stepCancel" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/activityTestTextViewPad"
        android:text="" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnTestQuit"

        android:id="@id/btnTestQuit"
        android:onClick="quitActivity" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/testActTextViewBack"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:gravity="center"
        android:padding="@dimen/activityTestTextViewPad"
        android:text=""
        android:id="@id/testActTextViewId" />


</LinearLayout>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Menu"
        android:onClick="showMenu"
        android:id="@+id/button"
        android:layout_gravity="right"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>